# static/swagger.json
@@ -401,6 +401,28 @@
           }
         }
       }
+    },
+    "/getMaxOrdersPlacedTime": {
+      "get": {
+        "tags": [
+          "Get max orders placed time"
+        ],
+        "summary": "Get max orders placed time",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "schema": {
+              "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          }
+        }
+      }
     }
   }
 }
